2012-03-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/module_manager.php
	 godmode/agentes/configurar_agente.php: Modification in order to 
	 delete synthetics modules or synth module components when a synth
	 module is deleted.
	  
	 Merged bugfix from trunk.

2012-03-07 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/ajax/visual_console_builder.ajax.php: fixed the value and
	undefined var.

2012-03-07 Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/graph_builder.main.php: Added custom seconds
	to period form merged from trunk

2012-03-07 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/graphs/fgraph.php: set by default the font size for bubble to 7.
	
	* godmode/reporting/visual_console_builder.editor.js: fixed to select
	progress bubble and bar.

2012-03-07 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_graph.php: fixed into the function "progress_bubble"
	pass the height to create the image for progress bubble.
	
	* include/graphs/functions_gd.php: fixed into the function
	"gd_progress_bubble" when the $progress is upper to 100% or lower 0% show
	the image "out of limits".
	
	* godmode/reporting/visual_console_builder.editor.js: fixed into the
	function "getPercentileBubble" set the height equal to width instead to 15
	pixels.

2012-03-06  Sancho Lerena <slerena@artica.es>

	* images/console/icons/nubebola*: New icons for big colored circle.

	* include/functions_groups.php: Fixed problem with "ALL" group in
	group view. (agents x2)

	* godmode/reporting/visual_console_builder.editor.php: More space 
	in fields.

2012-03-06  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/functions_reporting.php
	include/functions_ui.php
	operation/reporting/reporting_viewer.php: Improved the
	top n report and the general date report form

2012-03-05  Miguel de Dios  <miguel.dedios@artica.es>
	
	* pandora_console/include/functions_graph.php,